--- a/index.html
+++ b/index.html
@@ -145,19 +145,19 @@
       <h2>よくある質問</h2>
       <div class="accordion" data-accordion>
         <details>
-          <summary>授業は見学しても良いですか？</summary>
+          <summary>授業は見学できますか？</summary>
           <div class="content">
-            基本的には、お預けいただきます。保護者様がいらっしゃると甘えてしまったり、恥ずかしがってしまったりして学習効果が薄れる場合があるため、講師とお子様の1対1（〜3）で取り組みます。
+            保護者様がいらっしゃると甘えてしまったり、恥ずかしがってしまったりして学習効果が薄れる場合があるため、講師とお子様の1対1（〜3）で取り組みます。
           </div>
         </details>
         <details>
-          <summary>授業の様子ややったことは教えてもらえますか？</summary>
+          <summary>授業の様子や取り組み内容は教えてもらえますか？</summary>
           <div class="content">
             はい。ご利用可能な連絡手段を用いて、毎回の授業当日中に授業の様子や内容、宿題、次回取り組むことなどをお伝えします。
           </div>
         </details>
         <details>
-          <summary>振替はできますか？</summary>
+          <summary>授業の振替はできますか？</summary>
           <div class="content">
             はい。急用や体調不良など、理由は問わず振替調整いたします。
           </div>
@@ -293,3 +293,4 @@
   <script src="./script.js"></script>
 </body>
 </html>
+
