文言を訂正

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   <!-- 過去の様子（画像を最後にまとめて掲載） -->
   <section id="gallery" class="section alt">
     <div class="container">
-      <h2>過去の様子</h2>
+      <h2>受講の様子</h2>
       <p class="muted">※ 画像は一例です。最新の活動はSNSをご覧ください。</p>
       <div class="gallery-grid">
         <figure><div class="sq"><img src="./assets/img/class-01.jpg" width="1280" height="1280" alt="教室の全景【仮】"></div></figure>
@@ -293,4 +293,5 @@
   <script src="./script.js"></script>
 </body>
 </html>
+
 
