文言を訂正

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         </article>
         <article class="card">
           <h3>無理なく続くしくみ</h3>
-          <p>集中できる時間を見ながら休憩を設定。学習後は振り返りやお楽しみを取り入れ、無理なく継続できる仕組みを整えています。</p>
+          <p>集中できる時間を見ながら休憩を設定します。学習後は振り返りやお楽しみを取り入れ、無理なく継続できる仕組みを整えています。</p>
         </article>
         <article class="card">
           <h3>安心の相談サポート</h3>
-          <p>保護者様とのコミュニケーションを大切に。学習や生活、学校でのお悩みもお気軽にご相談いただけます。</p>
+          <p>保護者様とのコミュニケーションを大切にしています。学習や生活、学校でのお悩みもお気軽にご相談いただけます。</p>
         </article>
       </div>
     </div>
@@ -293,5 +293,6 @@
   <script src="./script.js"></script>
 </body>
 </html>
+
 
 
