フォント部分修正

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
   <main id="home" class="hero section">
     <div class="container hero-inner">
       <div class="hero-copy">
-        <div class="hero-brand">育ちの場　歩</div>
+        <div class="hero-brand">
+  <span class="brand-sub">育ちの場</span>
+  <span class="brand-main">歩</span>
+</div>
         <h1 class="display">「苦手」をなくし、自信を育む学習教室</h1>
         <p class="lead">
           ひとりひとりの「苦手」に寄り添い、小さな「できた」を積み重ねて自信へとつなげます。安心して挑戦できる個別・少人数制で、子どもたちが自分らしく成長できる、温かい居場所のような学習教室です。
@@ -83,7 +86,7 @@
       <h2>コース・料金</h2>
 
       <div class="price-note">
-        <p>コース別授業料 <strong>＋ 設備・運営費 5,500円／月</strong></p>
+        <p>コース別授業料 <strong>＋ 設備・運営費 <span class="nowrap">5,500円／月</span></strong></p>
       </div>
 
       <div class="price-grid">
@@ -256,7 +259,7 @@
     </div>
   </section>
 
-  <!-- 過去の様子（画像を最後にまとめて掲載） -->
+  <!-- 受講の様子（画像を最後にまとめて掲載） -->
   <section id="gallery" class="section alt">
     <div class="container">
       <h2>受講の様子</h2>
@@ -293,6 +296,3 @@
   <script src="./script.js"></script>
 </body>
 </html>
-
-
-
