顧客要望による変更

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
   <span class="brand-sub">育ちの場</span>
   <span class="brand-main">歩</span>
 </div>
-        <h1 class="display">「苦手」をなくし、自信を育む学習教室</h1>
+        <h1 class="display">「苦手」をなくし、<br>
+          <span class="indent-4">自信を育む学習教室</span>
+        </h1>
         <p class="lead">
           ひとりひとりの「苦手」に寄り添い、小さな「できた」を積み重ねて自信へとつなげます。安心して挑戦できる個別・少人数制で、子どもたちが自分らしく成長できる、温かい居場所のような学習教室です。
         </p>
@@ -111,15 +113,17 @@
       </div>
 
       <div class="flow">
-        <h3>受講の流れ</h3>
-        <ol>
-          <li>下記アンケートフォームの回答</li>
-          <li>保護者様との面談（現在の状況／当教室の方針）</li>
-          <li>初月体験授業（正規授業料 − 1,000円）</li>
-          <li>保護者様との面談（今後の方針や教材について）</li>
-          <li>ご入会手続き</li>
-        </ol>
-      </div>
+  <article class="price-card flow-card">
+    <h3>受講の流れ</h3>
+    <ol class="flow-steps">
+      <li>下記アンケートフォームの回答</li>
+      <li>保護者様との面談（現在の状況／当教室の方針）</li>
+      <li>初月体験授業（正規授業料 − 1,000円）</li>
+      <li>保護者様との面談（今後の方針や教材について）</li>
+      <li>ご入会手続き</li>
+    </ol>
+  </article>
+</div>
     </div>
   </section>
 
@@ -262,7 +266,7 @@
   <!-- 受講の様子（画像を最後にまとめて掲載） -->
   <section id="gallery" class="section alt">
     <div class="container">
-      <h2>受講の様子</h2>
+      <h2>授業の様子</h2>
       <p class="muted">※ 画像は一例です。最新の活動はSNSをご覧ください。</p>
       <div class="gallery-grid">
         <figure><div class="sq"><img src="./assets/img/class-01.jpg" width="1280" height="1280" alt="教室の全景【仮】"></div></figure>
