--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
   <!-- Hero -->
   <main id="home" class="hero section">
     <div class="container hero-inner">
-      <div class="hero-copy">
-        <div class="hero-brand">
-  <span class="brand-sub">育ちの場</span>
-  <span class="brand-main">歩</span>
+      <div class="hero-brand">
+  <span class="brand-main">育ちの場　歩</span>
 </div>
+      <div class="hero-copy">
         <h1 class="display">「苦手」をなくし、<br>
           <span class="indent-4">自信を育む学習教室</span>
         </h1>
@@ -113,7 +112,7 @@
       </div>
 
       <div class="flow">
-  <article class="price-card flow-card">
+  <article class="price-card flow-card featured">
     <h3>受講の流れ</h3>
     <ol class="flow-steps">
       <li>下記アンケートフォームの回答</li>
