全体のフォントを変更

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>育ちの場　歩｜「苦手」をなくし、自信を育む学習教室</title>
   <meta name="description" content="ひとりひとりの「苦手」に寄り添い、小さな「できた」を積み重ねて自信へ。個別・少人数制で安心して挑戦できる、温かい居場所のような学習教室です。">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600;700&family=Shippori+Mincho:wght@600&display=swap" rel="stylesheet">
+  <!-- Zen Maru Gothic を読み込み（無料の丸ゴ近似） -->
+<link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css" />
   <!-- ロゴは後日差し替え：/assets/img/logo.svg を予定 -->
   <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="46" fill="%23F28C00"/><text x="50" y="58" font-size="48" text-anchor="middle" fill="white">歩</text></svg>'>
