文字スタイル修正

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
   <span class="brand-main">育ちの場　歩</span>
 </div>
       <div class="hero-copy">
-        <h1 class="display">「苦手」をなくし、<br>
-          <span class="indent-4">自信を育む学習教室</span>
-        </h1>
+        <h1 class="display">「苦手」をなくし、<br>自信を育む学習教室</h1>
         <p class="lead">
           ひとりひとりの「苦手」に寄り添い、小さな「できた」を積み重ねて自信へとつなげます。安心して挑戦できる個別・少人数制で、子どもたちが自分らしく成長できる、温かい居場所のような学習教室です。
         </p>
